fix jittery scrolling on firefox by setting background attachment to fixed

--- a/parallax.css
+++ b/parallax.css
@@ -68,7 +68,7 @@ p {
 
 .cta-problem {
   text-align: center;
-  background: #eee url('./parallax-images/1.JPG') no-repeat center top;
+  background: #eee url('./parallax-images/1.JPG') no-repeat center top fixed;
 }
 
 .cta-problem .cta-content {
@@ -80,7 +80,7 @@ p {
 }
 
 .cta-solution {
-  background: #555 url('./parallax-images/2.jpg') no-repeat center top;
+  background: #555 url('./parallax-images/2.jpg') no-repeat center top fixed;
 }
 
 .cta-solution h1 {
@@ -94,7 +94,7 @@ p {
 }
 
 .cta-experience {
-  background: #aaa url('./parallax-images/3.JPG') no-repeat center top;
+  background: #aaa url('./parallax-images/3.JPG') no-repeat center top fixed;
 }
 
 .cta-experience .cta-content {
@@ -103,10 +103,10 @@ p {
 }
 
 .cta-form {
-  background: #ddd url('./parallax-images/4.jpg') no-repeat center top;
+  background: #ddd url('./parallax-images/4.jpg') no-repeat center top fixed;
 }
 
 .cta-form .cta-content {
   padding-top: 5em;
-  width: 930px;
+  width: 940px;
 }
